# openRuntime

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: local_sessions.rs  main.rs  models.rs  policy_engine.rs  runner_adapters.rs  supervisor.rs  task_store.rs  worktree_review.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
